--- a/develop/_partials/_globals.scss
+++ b/develop/_partials/_globals.scss
@@ -2,7 +2,7 @@ $admin-bar-height: 38px !default;
 $admin-bar-bgcolor: #c33 !default;
 
 $gutter-width: 10px !default;
-$sidebar-bgcolor: #9e9e9e !default;
+$sidebar-bgcolor: #cadceb !default;
 $border-color: #ccc !default;
 
 // List settings
